
syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;

package au.coaas.svm.proto;

message ListOfString {
   repeated string value = 1;
}

message SemanticVocabURL
{
    string url = 1;
}

message SemanticVocabClass
{
    string url = 1;
    string ontologyClass = 2;
}

message SemanticVocabRegisterationResponse
{
    int32 code = 1;
    string body = 2;
}

message Terms
{
    string body = 1;
}

message empty {}

service SVMService {
    rpc getClasses (SemanticVocabURL) returns (ListOfString);
    rpc registerVocabulary (SemanticVocabClass) returns (SemanticVocabRegisterationResponse);
    rpc getTerms (SemanticVocabClass) returns (Terms);
    rpc getParentClasses (SemanticVocabClass) returns (ListOfString);
    rpc getGraphs (empty) returns (ListOfString);
}

